# scientific-calculator

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: implementation_document.md  instructions_document.md  specification_document.md  test_document.md
documentation/weekly_reports/: week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md
src/: calculator.py  config.py  constants.py  performance_test.py
src/algorithms/: shunting_yard.py  shunting_yard2.py
src/data/: expression_1e3.txt  expression_1e4.txt  expression_1e5.txt  expression_1e6.txt  expression_2e5.txt  expression_4e5.txt  expression_6e5.txt  expression_8e5.txt
src/entities/: equation.py  expression.py  operator_stack.py  output_queue.py
src/services/: calculator_service.py  parser_service.py  shunting_yard_service.py  validation_service.py
src/tests/entities/: test_equation.py  test_expression.py  test_operator_stack.py  test_output_queue.py
src/tests/services/: test_calculator_service.py  test_parser_service.py  test_shunting_yard_service.py  test_validation_service.py
src/ui/: ui.py
