[tool.poetry]
name = "scientific-calculator"
version = "0.1.0"
description = ""
authors = ["Olli Ulmala <ulmala.olli@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
