[tool.poetry]
name = "scientific-calculator"
version = "0.1.0"
description = ""
authors = ["Olli Ulmala <ulmala.olli@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^2.1.2"
matplotlib = "^3.7.1"
pandas = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
coverage = "^7.2.6"
pylint = "^2.17.4"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
